# Graphics

PathTracingUsingCpp/: CMakeLists.txt  README.md
PathTracingUsingCpp/result/: binary.ppm  binarybackcolor.ppm
PathTracingUsingCpp/src/: BVH.cpp  Bounds3.hpp  Material.hpp  Renderer.cpp  Scene.cpp  Sphere.hpp  Triangle.hpp  main.cpp
